# banking_graphql

./: .env  Cargo.toml  README.md  db.sh  docker_compose.yml
migrations/: 20260619082007_create_users_table.sql  20260703082007_create_orders_table.sql
src/: main.rs
src/adapters/: mod.rs
src/adapters/inbound/: mod.rs
src/adapters/inbound/graph_ql/: mod.rs  order.rs  schema.rs  user.rs
src/adapters/outbound/: kafka.rs  kafka_service.rs  mod.rs  postgres.rs
src/application/: command.rs  mod.rs  order_service.rs  user_service.rs
src/config/: config.rs  db.rs  mod.rs
src/domain/: error.rs  mod.rs  order.rs  user.rs
src/ports/: mod.rs  repository.rs
